# streamlit-example

./: ..env.example  .cache.sqlite  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .streamlisecrets.toml  4_Prediction.py  =2.0  CNAME  Clean_App.py  Create csv.ipynb  Dataviz.py  Dataviz_plots.py  Decision Tree Classifier.joblib  Dockerfile  EDA.py  EDA_advanced_sample_12062023.csv  EdaAdvanced.py  EdaBasic.py  Footy_scraping.py  HOME PAGE.py  Home.py  HomeUpdate.py  Home_Leaderboard.py  K plus proches voisins.joblib  LIME2.py  MY_PROJECT.ipynb  Makefile  Models.py  Multipage.py  New_app.py  Overview.py  Overview_of_Product_Scoring.py  PANDASPROFILE.py  Pipfile  Prediction.py  Prediction_ORI.py  Procfile  (+145 more)
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: Create csv-checkpoint.ipynb
.streamlit/: config.toml  secrets.toml
Arkouda-Benchmark-Data/: arkouda_server-IO-1.out  arkouda_server-IO-16.out  arkouda_server-IO-2.out  arkouda_server-IO-32.out  arkouda_server-IO-4.out  arkouda_server-IO-8.out  arkouda_server-aggregate-1.out  arkouda_server-aggregate-16.out  arkouda_server-aggregate-2.out  arkouda_server-aggregate-32.out  arkouda_server-aggregate-4.out  arkouda_server-aggregate-8.out  arkouda_server-argsort-1.out  arkouda_server-argsort-16.out  arkouda_server-argsort-2.out  arkouda_server-argsort-32.out  arkouda_server-argsort-4.out  arkouda_server-argsort-8.out  arkouda_server-array_create-1.out  arkouda_server-array_create-16.out  arkouda_server-array_create-2.out  arkouda_server-array_create-32.out  (+82 more)
Data/: raw_data.csv  (+2 more)
(+84 files in other folders)
